--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "src/index.js",
   "dependencies": {},
   "devDependencies": {
-    "chippy": "treshugart/chippy#dfc4c5022a103e81eeb0404c8026ddb1ca5fd6da",
-    "gulp": "^3.8.11",
-    "gulp-auto-task": "0.0.1"
+    "eslint": "^1.3.0",
+    "galvatron": "treshugart/galvatron#5b7c948",
+    "gulp": "^3.9.0",
+    "gulp-auto-task": "treshugart/gulp-auto-task#ee89ea9",
+    "gulp-babel": "^5.2.1",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-less": "^3.0.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-webserver": "^0.9.1"
   },
   "scripts": {
-    "deploy": "gulp deploy",
-    "dist": "gulp dist",
-    "docs": "gulp docs",
-    "lib": "gulp lib",
-    "lint": "gulp lint",
-    "release": "gulp release",
-    "test": "gulp test"
+    "build": "gulp build",
+    "build-watch": "gulp build-watch",
+    "clean": "gulp clean"
   },
   "repository": {
     "type": "git",
